# CppSharpTest

./: CppSharpTest.sln  Readme.md
CppSharpTest/: CMakeLists.txt  CppCharpTest.csproj  Includes.hpp  Program.cs  Rakefile
CppSharpTest/CppAPI/: Main.cpp  Test.cpp  Test.hpp
CppSharpTest/CppAPI/Interop/: CppSharp.hpp
CppSharpTest/Template/: String_val.cs.in
CppSharpTestVS2019/: CppSharpTestVS2019.vcxproj
